--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node_modules/typescript/bin/tsc --rootDir ./src --outDir build --sourceMap false && npm run build:copy && npm run build:install",
     "build:copy": "cp package.json package-lock.json build && cd src && find ./**/*.yml | cpio -pdm ../build",
     "build:install": "cd build && npm install --production",
-    "test": "node_modules/.bin/mocha tests/**/*.unitTest.js"
+    "test": "node_modules/.bin/mocha tests/**/*.unitTest.js",
+    "sonar-scanner": "echo 'TODO'"
   },
   "author": "",
   "license": "ISC",
