--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prepush",
+      "pre-commit": "npm run security-checks",
       "pre-push": "npm run prepush"
     }
   }
