--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.601.0",
+    "aws-xray-sdk": "^2.5.0",
+    "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
-    "node-yaml": "^3.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   },
@@ -31,24 +33,16 @@
     "@types/aws-lambda": "^8.10.33",
     "@types/jest": "^24.0.19",
     "@types/jest-plugin-context": "^2.9.2",
+    "@types/js-yaml": "^3.12.1",
     "@types/jsonwebtoken": "^8.3.5",
-    "@types/lodash.mapvalues": "^4.6.6",
     "@types/node": "^12.11.5",
     "@types/request-promise": "^4.1.44",
     "audit-filter": "^0.5.0",
-    "gulp": "^4.0.2",
     "husky": "^3.0.8",
     "jest": "^24.9.0",
     "jest-plugin-context": "^2.9.0",
     "jest-sonar-reporter": "^2.0.0",
-    "serverless": "^1.54.0",
-    "serverless-dynamodb-local": "^0.2.38",
-    "serverless-offline": "^5.12.0",
-    "serverless-plugin-typescript": "^1.1.9",
-    "supertest": "^4.0.2",
-    "swagger-jsdoc": "^3.4.0",
-    "ts-jest": "^24.1.0",
-    "ts-node-register": "^1.0.0",
+    "ts-jest": "^24.3.0",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4"
   },
