--- a/package.json
+++ b/package.json
@@ -22,29 +22,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.745.0",
-    "aws-xray-sdk": "^3.1.0",
-    "js-yaml": "^3.14.0",
-    "jsonwebtoken": "^8.5.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "aws-sdk": "2.745.0",
+    "aws-xray-sdk": "3.1.0",
+    "axios": "0.21.1",
+    "js-yaml": "3.14.0",
+    "jsonwebtoken": "8.5.1",
+    "nock": "13.0.8",
+    "request": "2.88.2",
+    "request-promise": "4.2.6"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.61",
-    "@types/jest": "^26.0.13",
-    "@types/jest-plugin-context": "^2.9.3",
-    "@types/js-yaml": "^3.12.5",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.6.3",
-    "@types/request-promise": "^4.1.46",
-    "audit-filter": "^0.5.0",
-    "husky": "^4.2.5",
-    "jest": "^26.4.2",
-    "jest-plugin-context": "^2.9.0",
-    "jest-sonar-reporter": "^2.0.0",
-    "ts-jest": "^26.3.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.0.2"
+    "@types/aws-lambda": "8.10.61",
+    "@types/jest": "26.0.13",
+    "@types/jest-plugin-context": "2.9.3",
+    "@types/js-yaml": "3.12.5",
+    "@types/jsonwebtoken": "8.5.0",
+    "@types/node": "14.6.3",
+    "@types/request-promise": "4.1.46",
+    "audit-filter": "0.5.0",
+    "husky": "4.2.5",
+    "jest": "26.4.2",
+    "jest-plugin-context": "2.9.0",
+    "jest-sonar-reporter": "2.0.0",
+    "ts-jest": "26.3.0",
+    "tslint": "6.1.3",
+    "typescript": "4.0.2"
   },
   "jestSonar": {
     "reportPath": ".reports",
